--- a/client/css/mapper.styl
+++ b/client/css/mapper.styl
@@ -1,7 +1,5 @@
 @import 'nib'
 
-.carrier
-    position: relative
 
 .stack > .pages:not(.active)
     visibility: hidden
@@ -30,16 +28,6 @@ table
 .notification > a.glowing
   animation: glow .5s infinite alternate;
 
-.vertical-table
-  display: table
-  border-spacing: 0px 5px
-
-.vertical-table-row
-  display: table-row
-
-.vertical-table-cell
-  display: table-cell
-
 .user-list
   height: 80px
   max-height: 80px
@@ -47,10 +35,6 @@ table
 .chat-overview
   height: 172px
   max-height: 172px
-
-.scroll-vertical
-    overflow-x: hidden
-    overflow-y: auto
 
 #editor, #map, #events
     box-shadow 0px 0px 5px 5px rgba(0, 0, 0, 0.2);
